--- a/FrontEnd/landing.html
+++ b/FrontEnd/landing.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <button type="button" onClick="clear()">Submit</button>
+        <button type="button" onClick="submitData()">Submit</button>
         <script src="landing.js"></script>
     </body>
 </html>
